Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/APlayerController.h

	DOTNET_EXPORT auto E_APlayerController_AddRollInput(APlayerController* Self, float Val)
	{
		auto _p0 = Val;
		Self->AddRollInput(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_AddYawInput(APlayerController* Self, float Val)
	{
		auto _p0 = Val;
		Self->AddYawInput(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_BeginPlayingState(APlayerController* Self)
	{
		((E_PROTECTED_WRAP_APlayerController*)Self)->BeginPlayingState_WRAP();
	}
	DOTNET_EXPORT auto E_APlayerController_Camera(APlayerController* Self, char* NewMode)
	{
		auto _p0 = ConvertFromManage_FName(NewMode);
		Self->Camera(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientAddTextureStreamingLoc(APlayerController* Self, INT_PTR InLoc, float Duration, bool bOverrideLocation)
	{
		auto _p0 = *(FVector*)InLoc;
		auto _p1 = Duration;
		auto _p2 = bOverrideLocation;
		Self->ClientAddTextureStreamingLoc(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientCancelPendingMapChange(APlayerController* Self)
	{
		Self->ClientCancelPendingMapChange();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientCapBandwidth(APlayerController* Self, int32 Cap)
	{
		auto _p0 = Cap;
		Self->ClientCapBandwidth(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientClearCameraLensEffects(APlayerController* Self)
	{
		Self->ClientClearCameraLensEffects();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientCommitMapChange(APlayerController* Self)
	{
		Self->ClientCommitMapChange();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientEnableNetworkVoice(APlayerController* Self, bool bEnable)
	{
		auto _p0 = bEnable;
		Self->ClientEnableNetworkVoice(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientEndOnlineSession(APlayerController* Self)
	{
		Self->ClientEndOnlineSession();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientFlushLevelStreaming(APlayerController* Self)
	{
		Self->ClientFlushLevelStreaming();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientForceGarbageCollection(APlayerController* Self)
	{
		Self->ClientForceGarbageCollection();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientGameEnded(APlayerController* Self, AActor* EndGameFocus, bool bIsWinner)
	{
		auto _p0 = EndGameFocus;
		auto _p1 = bIsWinner;
		Self->ClientGameEnded(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientGotoState(APlayerController* Self, char* NewState)
	{
		auto _p0 = ConvertFromManage_FName(NewState);
		Self->ClientGotoState(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientIgnoreLookInput(APlayerController* Self, bool bIgnore)
	{
		auto _p0 = bIgnore;
		Self->ClientIgnoreLookInput(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientIgnoreMoveInput(APlayerController* Self, bool bIgnore)
	{
		auto _p0 = bIgnore;
		Self->ClientIgnoreMoveInput(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientMessage(APlayerController* Self, char* S, char* Type, float MsgLifeTime)
	{
		auto _p0 = ConvertFromManage_FString(S);
		auto _p1 = ConvertFromManage_FName(Type);
		auto _p2 = MsgLifeTime;
		Self->ClientMessage(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientPrepareMapChange(APlayerController* Self, char* LevelName, bool bFirst, bool bLast)
	{
		auto _p0 = ConvertFromManage_FName(LevelName);
		auto _p1 = bFirst;
		auto _p2 = bLast;
		Self->ClientPrepareMapChange(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientPrestreamTextures(APlayerController* Self, AActor* ForcedActor, float ForceDuration, bool bEnableStreaming, int32 CinematicTextureGroups)
	{
		auto _p0 = ForcedActor;
		auto _p1 = ForceDuration;
		auto _p2 = bEnableStreaming;
		auto _p3 = CinematicTextureGroups;
		Self->ClientPrestreamTextures(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientRepObjRef(APlayerController* Self, UObject* Object)
	{
		auto _p0 = Object;
		Self->ClientRepObjRef(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientReset(APlayerController* Self)
	{
		Self->ClientReset();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientRestart(APlayerController* Self, APawn* NewPawn)
	{
		auto _p0 = NewPawn;
		Self->ClientRestart(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientRetryClientRestart(APlayerController* Self, APawn* NewPawn)
	{
		auto _p0 = NewPawn;
		Self->ClientRetryClientRestart(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientReturnToMainMenu(APlayerController* Self, char* ReturnReason)
	{
		auto _p0 = ConvertFromManage_FString(ReturnReason);
		Self->ClientReturnToMainMenu(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientReturnToMainMenuWithTextReason(APlayerController* Self, char* ReturnReason)
	{
		auto _p0 = ConvertFromManage_FText(ReturnReason);
		Self->ClientReturnToMainMenuWithTextReason(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientSetBlockOnAsyncLoading(APlayerController* Self)
	{
		Self->ClientSetBlockOnAsyncLoading();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientSetCameraMode(APlayerController* Self, char* NewCamMode)
	{
		auto _p0 = ConvertFromManage_FName(NewCamMode);
		Self->ClientSetCameraMode(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientSetCinematicMode(APlayerController* Self, bool bInCinematicMode, bool bAffectsMovement, bool bAffectsTurning, bool bAffectsHUD)
	{
		auto _p0 = bInCinematicMode;
		auto _p1 = bAffectsMovement;
		auto _p2 = bAffectsTurning;
		auto _p3 = bAffectsHUD;
		Self->ClientSetCinematicMode(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientSetSpectatorWaiting(APlayerController* Self, bool bWaiting)
	{
		auto _p0 = bWaiting;
		Self->ClientSetSpectatorWaiting(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientStartOnlineSession(APlayerController* Self)
	{
		Self->ClientStartOnlineSession();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientTeamMessage(APlayerController* Self, APlayerState* SenderPlayerState, char* S, char* Type, float MsgLifeTime)
	{
		auto _p0 = SenderPlayerState;
		auto _p1 = ConvertFromManage_FString(S);
		auto _p2 = ConvertFromManage_FName(Type);
		auto _p3 = MsgLifeTime;
		Self->ClientTeamMessage(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientUpdateLevelStreamingStatus(APlayerController* Self, char* PackageName, bool bNewShouldBeLoaded, bool bNewShouldBeVisible, bool bNewShouldBlockOnLoad, int32 LODIndex)
	{
		auto _p0 = ConvertFromManage_FName(PackageName);
		auto _p1 = bNewShouldBeLoaded;
		auto _p2 = bNewShouldBeVisible;
		auto _p3 = bNewShouldBlockOnLoad;
		auto _p4 = LODIndex;
		Self->ClientUpdateLevelStreamingStatus(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_APlayerController_ClientVoiceHandshakeComplete(APlayerController* Self)
	{
		Self->ClientVoiceHandshakeComplete();
	}
	DOTNET_EXPORT auto E_APlayerController_ClientWasKicked(APlayerController* Self, char* KickReason)
	{
		auto _p0 = ConvertFromManage_FText(KickReason);
		Self->ClientWasKicked(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_DelayedPrepareMapChange(APlayerController* Self)
	{
		Self->DelayedPrepareMapChange();
	}
	DOTNET_EXPORT auto E_APlayerController_DeprojectMousePositionToWorld(APlayerController* Self, INT_PTR WorldLocation, INT_PTR WorldDirection)
	{
		auto& _p0 = *(FVector*)WorldLocation;
		auto& _p1 = *(FVector*)WorldDirection;
		return Self->DeprojectMousePositionToWorld(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_DeprojectScreenPositionToWorld(APlayerController* Self, float ScreenX, float ScreenY, INT_PTR WorldLocation, INT_PTR WorldDirection)
	{
		auto _p0 = ScreenX;
		auto _p1 = ScreenY;
		auto& _p2 = *(FVector*)WorldLocation;
		auto& _p3 = *(FVector*)WorldDirection;
		return Self->DeprojectScreenPositionToWorld(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APlayerController_EnableCheats(APlayerController* Self)
	{
		Self->EnableCheats();
	}
	DOTNET_EXPORT auto E_APlayerController_EndPlayingState(APlayerController* Self)
	{
		((E_PROTECTED_WRAP_APlayerController*)Self)->EndPlayingState_WRAP();
	}
	DOTNET_EXPORT auto E_APlayerController_FOV(APlayerController* Self, float NewFOV)
	{
		auto _p0 = NewFOV;
		Self->FOV(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_GetHitResultAtScreenPosition(APlayerController* Self, INT_PTR ScreenPosition, ECollisionChannel TraceChannel, INT_PTR CollisionQueryParams, INT_PTR HitResult)
	{
		auto _p0 = *(FVector2D*)ScreenPosition;
		auto _p1 = TraceChannel;
		auto& _p2 = *(FCollisionQueryParams*)CollisionQueryParams;
		auto& _p3 = *(FHitResult*)HitResult;
		return Self->GetHitResultAtScreenPosition(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APlayerController_GetHitResultAtScreenPosition_o1(APlayerController* Self, INT_PTR ScreenPosition, ECollisionChannel TraceChannel, bool bTraceComplex, INT_PTR HitResult)
	{
		auto _p0 = *(FVector2D*)ScreenPosition;
		auto _p1 = TraceChannel;
		auto _p2 = bTraceComplex;
		auto& _p3 = *(FHitResult*)HitResult;
		return Self->GetHitResultAtScreenPosition(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APlayerController_GetHitResultUnderCursor(APlayerController* Self, ECollisionChannel TraceChannel, bool bTraceComplex, INT_PTR HitResult)
	{
		auto _p0 = TraceChannel;
		auto _p1 = bTraceComplex;
		auto& _p2 = *(FHitResult*)HitResult;
		return Self->GetHitResultUnderCursor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_GetHitResultUnderCursorByChannel(APlayerController* Self, ETraceTypeQuery TraceChannel, bool bTraceComplex, INT_PTR HitResult)
	{
		auto _p0 = TraceChannel;
		auto _p1 = bTraceComplex;
		auto& _p2 = *(FHitResult*)HitResult;
		return Self->GetHitResultUnderCursorByChannel(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_GetHUD(APlayerController* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetHUD());
	}
	DOTNET_EXPORT auto E_APlayerController_GetInputMotionState(APlayerController* Self, INT_PTR Tilt, INT_PTR RotationRate, INT_PTR Gravity, INT_PTR Acceleration)
	{
		auto& _p0 = *(FVector*)Tilt;
		auto& _p1 = *(FVector*)RotationRate;
		auto& _p2 = *(FVector*)Gravity;
		auto& _p3 = *(FVector*)Acceleration;
		Self->GetInputMotionState(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APlayerController_GetInputMouseDelta(APlayerController* Self, float DeltaX, float DeltaY)
	{
		auto& _p0 = DeltaX;
		auto& _p1 = DeltaY;
		Self->GetInputMouseDelta(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_GetMinRespawnDelay(APlayerController* Self)
	{
		return Self->GetMinRespawnDelay();
	}
	DOTNET_EXPORT auto E_APlayerController_GetMousePosition(APlayerController* Self, float LocationX, float LocationY)
	{
		auto& _p0 = LocationX;
		auto& _p1 = LocationY;
		return Self->GetMousePosition(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_GetViewportSize(APlayerController* Self, int32 SizeX, int32 SizeY)
	{
		auto& _p0 = SizeX;
		auto& _p1 = SizeY;
		Self->GetViewportSize(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_LocalTravel(APlayerController* Self, char* URL)
	{
		auto _p0 = ConvertFromManage_FString(URL);
		Self->LocalTravel(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_NotifyLoadedWorld(APlayerController* Self, char* WorldPackageName, bool bFinalDest)
	{
		auto _p0 = ConvertFromManage_FName(WorldPackageName);
		auto _p1 = bFinalDest;
		Self->NotifyLoadedWorld(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_Pause(APlayerController* Self)
	{
		Self->Pause();
	}
	DOTNET_EXPORT auto E_APlayerController_PlayerTick(APlayerController* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		Self->PlayerTick(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_PostProcessInput(APlayerController* Self, float DeltaTime, bool bGamePaused)
	{
		auto _p0 = DeltaTime;
		auto _p1 = bGamePaused;
		Self->PostProcessInput(_p0, _p1);
	}